--- a/.github/actions/provision-k8s/action.yml
+++ b/.github/actions/provision-k8s/action.yml
@@ -157,7 +157,11 @@ runs:
       shell: bash
       run: |
         set -Eeuxo pipefail
-        kubectl apply -f https://raw.githubusercontent.com/rancher/local-path-provisioner/v0.0.31/deploy/local-path-storage.yaml
+        # InspectFailed Failed to inspect image "": rpc error: code = Unknown desc = short name mode is enforcing, but image name rancher/local-path-provisioner:v0.0.31 returns ambiguous list
+        (curl -fsSL https://raw.githubusercontent.com/rancher/local-path-provisioner/v0.0.32/deploy/local-path-storage.yaml
+          | sed -i 's|image: rancher/local-path-provisioner|image: docker.io/rancher/local-path-provisioner|g'
+          | kubectl apply -f -
+        )
         kubectl wait deployments --all --namespace=local-path-storage --for=condition=Available --timeout=100s || (
           kubectl describe deployments --namespace=local-path-storage
           kubectl --namespace=local-path-storage get events --sort-by='.lastTimestamp'
