--- a/.github/actions/provision-k8s/action.yml
+++ b/.github/actions/provision-k8s/action.yml
@@ -158,9 +158,9 @@ runs:
       run: |
         set -Eeuxo pipefail
         # InspectFailed Failed to inspect image "": rpc error: code = Unknown desc = short name mode is enforcing, but image name rancher/local-path-provisioner:v0.0.31 returns ambiguous list
-        (curl -fsSL https://raw.githubusercontent.com/rancher/local-path-provisioner/v0.0.32/deploy/local-path-storage.yaml
-          | sed -i 's|image: rancher/local-path-provisioner|image: docker.io/rancher/local-path-provisioner|g'
-          | kubectl apply -f -
+        (curl -fsSL https://raw.githubusercontent.com/rancher/local-path-provisioner/v0.0.32/deploy/local-path-storage.yaml |
+          sed -i 's|image: rancher/local-path-provisioner|image: docker.io/rancher/local-path-provisioner|g' |
+          kubectl apply -f -
         )
         kubectl wait deployments --all --namespace=local-path-storage --for=condition=Available --timeout=100s || (
           kubectl describe deployments --namespace=local-path-storage
