--- a/.github/actions/provision-k8s/action.yml
+++ b/.github/actions/provision-k8s/action.yml
@@ -44,7 +44,7 @@ runs:
         # E: Packages were downgraded and -y was used without --allow-downgrades.
 
         sudo apt-get install -y --allow-downgrades \
-          "cri-o=${CRIO_VERSION}.*" \
+          "cri-o=${CRIO_VERSION}.*" "cri-tools=${CRIO_VERSION}.*" \
           "kubelet=${KUBERNETES_VERSION}.*" "kubeadm=${KUBERNETES_VERSION}.*" "kubectl=${KUBERNETES_VERSION}.*" \
           conntrack
 
@@ -61,13 +61,12 @@ runs:
         sudo systemctl daemon-reload
         sudo systemctl start crio.service
       env:
-        # TODO(jdanek): install also "cri-tools=${CRIO_VERSION}.*" when updating to 1.33
-        CRIO_VERSION: 1.32
+        CRIO_VERSION: 1.34
         # This has to be kept in sync with the packages above, otherwise
         # [ERROR KubeletVersion]: the kubelet version is higher than the control plane version.
         #  This is not a supported version skew and may lead to a malfunctional cluster.
         #  Kubelet version: "1.33.0" Control plane version: "1.30.12"
-        KUBERNETES_VERSION: 1.33
+        KUBERNETES_VERSION: 1.34
         # Also update version in kubeadm.yaml
 
     - run: sudo crictl info
@@ -158,8 +157,17 @@ runs:
       shell: bash
       run: |
         set -Eeuxo pipefail
-        kubectl apply -f https://raw.githubusercontent.com/rancher/local-path-provisioner/v0.0.31/deploy/local-path-storage.yaml
-        kubectl wait deployments --all --namespace=local-path-storage --for=condition=Available --timeout=100s
+        # InspectFailed Failed to inspect image "": rpc error: code = Unknown desc = short name mode is enforcing, but image name rancher/local-path-provisioner:v0.0.31 returns ambiguous list
+        (curl -fsSL https://raw.githubusercontent.com/rancher/local-path-provisioner/v0.0.32/deploy/local-path-storage.yaml |
+          sed 's|image: rancher/local-path-provisioner|image: docker.io/rancher/local-path-provisioner|g' |
+          kubectl apply -f -
+        )
+        kubectl wait deployments --all --namespace=local-path-storage --for=condition=Available --timeout=100s || (
+          kubectl describe deployments --namespace=local-path-storage
+          kubectl --namespace=local-path-storage get events --sort-by='.lastTimestamp'
+          kubectl --namespace=local-path-storage describe pods
+          false
+        )
         # https://kubernetes.io/docs/tasks/administer-cluster/change-default-storage-class/
         kubectl get storageclass
         kubectl patch storageclass local-path -p '{"metadata": {"annotations":{"storageclass.kubernetes.io/is-default-class":"true"}}}'
