RHAIENG-1277: fix(ci): restrict the protobuf unpin with "protobuf==6.31.1"
* https://github.com/opendatahub-io/notebooks/issues/2155
* https://github.com/opendatahub-io/notebooks/issues/2154

```
AttributeError: 'MessageFactory' object has no attribute 'GetPrototype'
```

https://github.com/opendatahub-io/notebooks/actions/runs/17995108333/job/51192775358#step:36:525

--- a/jupyter/rocm/tensorflow/ubi9-python-3.12/pyproject.toml
+++ b/jupyter/rocm/tensorflow/ubi9-python-3.12/pyproject.toml
@@ -58,8 +58,7 @@ dependencies = [
 
 override-dependencies = [
     # tf2onnx has pinned protobuf version, that causes conflict with other packages
-    # TODO(jdanek): consider tightening this to "protobuf>=3.20.3,<6"  # tf2onnx pins protobuf too low; allow TF-compatible versions
-    "protobuf"
+    "protobuf==6.31.1"
 ]
 
 environments = [
