RHAIENG-1277: fix(ci): monkypatch a protobuf 6.x (6.31) incompatibility
`AttributeError: 'MessageFactory' object has no attribute 'GetPrototype'` is not a problem in your own code—it is a **library-level incompatibility** that started to appear after the release of **protobuf ≥ 6.30** (especially 6.31).
Google removed/deprecated the method `MessageFactory.GetPrototype` and replaced it with `GetMessageClass`.
TensorFlow, PyTorch, Transformers, YOLO, ComfyUI, etc. still contain helper code that tries to call the old name, so the exception is raised **while they are being imported or while they build a graph**, not while your script is doing anything special.

## What you can (and should) do

1. **Down-grade protobuf to the last 5.x line** (5.29.4 or lower).
   That version still has `GetPrototype`, so the error disappears immediately.

   ```bash
   pip install -U "protobuf<6.0"   # 5.29.4 is the newest 5.x
   ```

   After the downgrade **restart the Python kernel / re-launch the process** so the already-imported modules disappear from `sys.modules`.

   > 99 % of the reports on GitHub, HF, Ultralytics, ComfyUI, etc. are solved by this single step .

2. **Keep every other package at their current version**; you do **not** need to downgrade TensorFlow, PyTorch, etc.
   Protobuf 5.29 is forward-compatible with every major framework that ships `.proto` files.

3. **If you must stay on protobuf 6.x** you would have to patch the offending code yourself (monkey-patch `google.protobuf.message_factory.MessageFactory.GetPrototype` so that it simply aliases `GetMessageClass`).
   A few projects already ship such a shim, but most users simply stay on 5.x until the ecosystem catches up .

4. **Watch the issue trackers** (TensorFlow #94030, Ultralytics #20527, …).
   When the libraries eventually release a version that says “supports protobuf 6.x” you can upgrade again.

--- a/jupyter/rocm/tensorflow/ubi9-python-3.12/Dockerfile.rocm
+++ b/jupyter/rocm/tensorflow/ubi9-python-3.12/Dockerfile.rocm
@@ -114,6 +114,7 @@ WORKDIR /opt/app-root/src
 ###########################
 FROM rocm-jupyter-datascience AS rocm-jupyter-tensorflow
 
+ARG JUPYTER_REUSABLE_UTILS=jupyter/utils
 ARG DATASCIENCE_SOURCE_CODE=jupyter/datascience/ubi9-python-3.12
 ARG TENSORFLOW_SOURCE_CODE=jupyter/rocm/tensorflow/ubi9-python-3.12
 
@@ -151,5 +152,7 @@ RUN echo "Installing softwares and packages" && \
     # Fix permissions to support pip in Openshift environments \
     chmod -R g+w /opt/app-root/lib/python3.12/site-packages && \
     fix-permissions /opt/app-root -P
+
+COPY ${JUPYTER_REUSABLE_UTILS}/usercustomize.pth ${JUPYTER_REUSABLE_UTILS}/monkey_patch_protobuf_6x.py /opt/app-root/lib/python3.12/site-packages/
 
 WORKDIR /opt/app-root/src
