RHAIENG-287: fix(Dockerfiles): use separate export to avoid Hadolint SC2155 warning
```
./runtimes/datascience/ubi9-python-3.12/Dockerfile.cpu:214 SC2155 warning: Declare and assign separately to avoid masking return values.
```

--- a/jupyter/datascience/ubi9-python-3.12/Dockerfile.cpu
+++ b/jupyter/datascience/ubi9-python-3.12/Dockerfile.cpu
@@ -198,7 +198,8 @@ if [ "${TARGETARCH}" = "ppc64le" ]; then
     git checkout ${ONNX_VERSION}
     git submodule update --init --recursive
     pip install -r requirements.txt
-    export CMAKE_ARGS="-DPython3_EXECUTABLE=$(which python3.12)"
+    CMAKE_ARGS="-DPython3_EXECUTABLE=$(which python3.12)"
+    export CMAKE_ARGS
     pip wheel . -w /root/onnx_wheel
 else
     echo "Skipping ONNX build on non-Power"
