RHAIENG-287: fix(Dockerfiles): use pip install --no-cache-dir to avoid Hadolint DL3042 warning
```
./runtimes/datascience/ubi9-python-3.12/Dockerfile.cpu:214 DL3042 warning: Avoid use of cache directory with pip. Use `pip install --no-cache-dir <package>`
./runtimes/datascience/ubi9-python-3.12/Dockerfile.cpu:239 DL3042 warning: Avoid use of cache directory with pip. Use `pip install --no-cache-dir <package>`
./runtimes/datascience/ubi9-python-3.12/Dockerfile.cpu:308 DL3042 warning: Avoid use of cache directory with pip. Use `pip install --no-cache-dir <package>`
./codeserver/ubi9-python-3.12/Dockerfile.cpu:53 DL3042 warning: Avoid use of cache directory with pip. Use `pip install --no-cache-dir <package>`
./jupyter/trustyai/ubi9-python-3.12/Dockerfile.cpu:32 DL3042 warning: Avoid use of cache directory with pip. Use `pip install --no-cache-dir <package>`
```

--- a/codeserver/ubi9-python-3.12/Dockerfile.cpu
+++ b/codeserver/ubi9-python-3.12/Dockerfile.cpu
@@ -51,7 +51,7 @@ COPY ${CODESERVER_SOURCE_CODE}/devel_env_setup.sh ./
 #            we need to ensure the same cache directory is mounted in
 #            the final stage with the necessary permissions to consume from cache
 RUN --mount=type=cache,target=/root/.cache/uv \
-    pip install --no-cache uv && \
+    pip install --no-cache-dir uv && \
     # the devel script is ppc64le specific - sets up build-time dependencies
     source ./devel_env_setup.sh && \
     # This may have to download and compile some dependencies, and as we don't lock requirements from `build-system.requires`,
