RHAIENG-287: fix(Dockerfiles): use FROM stage alias to avoid Hadolint DL3022 warning
```
`FROM` alias
./runtimes/tensorflow/ubi9-python-3.12/Dockerfile.cuda:23 DL3022 warning: `COPY --from` should reference a previously defined `FROM` alias
./runtimes/minimal/ubi9-python-3.12/Dockerfile.cpu:19 DL3022 warning: `COPY --from` should reference a previously defined `FROM` alias
./runtimes/datascience/ubi9-python-3.12/Dockerfile.cpu:21 DL3022 warning: `COPY --from` should reference a previously defined `FROM` alias
./runtimes/rocm-pytorch/ubi9-python-3.12/Dockerfile.rocm:19 DL3022 warning: `COPY --from` should reference a previously defined `FROM` alias
./runtimes/pytorch/ubi9-python-3.12/Dockerfile.cuda:21 DL3022 warning: `COPY --from` should reference a previously defined `FROM` alias
./runtimes/rocm-tensorflow/ubi9-python-3.12/Dockerfile.rocm:19 DL3022 warning: `COPY --from` should reference a previously defined `FROM` alias
./codeserver/ubi9-python-3.12/Dockerfile.cpu:20 DL3022 warning: `COPY --from` should reference a previously defined `FROM` alias
./codeserver/ubi9-python-3.12/Dockerfile.cpu:77 DL3022 warning: `COPY --from` should reference a previously defined `FROM` alias
```

--- a/jupyter/minimal/ubi9-python-3.12/Dockerfile.rocm
+++ b/jupyter/minimal/ubi9-python-3.12/Dockerfile.rocm
@@ -3,6 +3,9 @@
 #########################
 ARG BASE_IMAGE
 
+# External image alias for UBI repository configuration
+FROM registry.access.redhat.com/ubi9/ubi AS ubi-repos
+
 ####################
 # rocm-base        #
 ####################
@@ -16,7 +19,7 @@ USER 0
 # Inject the official UBI 9 repository configuration into the AIPCC base image.
 # The Quay-based AIPCC image is "repo-less" by default (https://gitlab.com/redhat/rhel-ai/core/base-images/app#repositories), so dnf cannot upgrade or install packages.
 # By copying ubi.repo from the public UBI 9 image, we enable package management for upgrades and installations.
-COPY --from=registry.access.redhat.com/ubi9/ubi /etc/yum.repos.d/ubi.repo /etc/yum.repos.d/ubi.repo
+COPY --from=ubi-repos /etc/yum.repos.d/ubi.repo /etc/yum.repos.d/ubi.repo
 
 # upgrade first to avoid fixable vulnerabilities begin
 # Problem: The operation would result in removing the following protected packages: systemd
