RHAIENG-287: fix(Dockerfiles): use bash or printf to avoid Hadolint SC3037,SC3041 warning
```
./jupyter/datascience/ubi9-python-3.12/Dockerfile.cpu:19 SC3037 warning: In POSIX sh, echo flags are undefined.
./jupyter/datascience/ubi9-python-3.12/Dockerfile.cpu:178 SC3041 warning: In POSIX sh, set flag -E is undefined.
./jupyter/datascience/ubi9-python-3.12/Dockerfile.cpu:312 SC3041 warning: In POSIX sh, set flag -E is undefined.
./jupyter/datascience/ubi9-python-3.12/Dockerfile.cpu:322 SC3041 warning: In POSIX sh, set flag -E is undefined.
./jupyter/datascience/ubi9-python-3.12/Dockerfile.cpu:331 SC3041 warning: In POSIX sh, set flag -E is undefined.
./codeserver/ubi9-python-3.12/Dockerfile.cpu:288 SC3041 warning: In POSIX sh, set flag -E is undefined.
```

--- a/codeserver/ubi9-python-3.12/Dockerfile.cpu
+++ b/codeserver/ubi9-python-3.12/Dockerfile.cpu
@@ -284,7 +284,7 @@ FROM codeserver as tests
 ARG CODESERVER_SOURCE_CODE=codeserver/ubi9-python-3.12
 COPY ${CODESERVER_SOURCE_CODE}/test /tmp/test
 # TODO(jdanek): add --mount=type=bind,target=/opt/app-root/src
-RUN <<'EOF'
+RUN /bin/bash <<'EOF'
 set -Eeuxo pipefail
 python3 /tmp/test/test_startup.py 2>&1 | tee /tmp/test_log.txt
 EOF
