Expose TARGETARG on the rsyudio stage

--- a/rstudio/rhel9-python-3.12/Dockerfile.cpu
+++ b/rstudio/rhel9-python-3.12/Dockerfile.cpu
@@ -47,6 +47,7 @@ WORKDIR /opt/app-root/src
 FROM cpu-base AS cpu-rstudio
 
 ARG RSTUDIO_SOURCE_CODE=rstudio/rhel9-python-3.12
+ARG TARGETARCH
 
 WORKDIR /opt/app-root/bin
 
