--- a/rstudio/c9s-python-3.12/Dockerfile.cpu
+++ b/rstudio/c9s-python-3.12/Dockerfile.cpu
@@ -42,6 +42,7 @@ WORKDIR /opt/app-root/src
 FROM cpu-base AS cpu-rstudio
 
 ARG RSTUDIO_SOURCE_CODE=rstudio/c9s-python-3.12
+ARG TARGETARCH
 
 WORKDIR /opt/app-root/bin
 
