RHOAIENG-31715: add s390x Support for TrustyAI Notebook (#2568)
* Enabled TrustyAI Notebook for s390x

Signed-off-by: Nishan Acharya <Nishan.Acharya@ibm.com>

* Address Comments

Signed-off-by: Nishan Acharya <Nishan.Acharya@ibm.com>

* Removed EPEL from output stage

Signed-off-by: Nishan Acharya <Nishan.Acharya@ibm.com>

* Add s390x label for konflux

Signed-off-by: Nishan Acharya <Nishan.Acharya@ibm.com>

---------

Signed-off-by: Nishan Acharya <Nishan.Acharya@ibm.com>

--- a/jupyter/trustyai/ubi9-python-3.12/pyproject.toml
+++ b/jupyter/trustyai/ubi9-python-3.12/pyproject.toml
@@ -5,7 +5,7 @@ requires-python = "==3.12.*"
 
 dependencies = [
     # PyTorch packages
-    "torch==2.7.1+cu128; platform_machine != 'ppc64le'",
+    "torch==2.7.1+cu128; platform_machine != 'ppc64le' and platform_machine != 's390x'",
 
     # Triton here is a dependency of torch, and is just being
     # explicitly re-declared so that the index to pull it from can be
@@ -18,7 +18,7 @@ dependencies = [
     #
     # Since it's a dependency of torch, I've also added same platform
     # exclusion marker to omit for ppc64le.
-    "triton==3.3.1; platform_machine != 'ppc64le'",
+    "triton==3.3.1; platform_machine != 'ppc64le' and platform_machine != 's390x'",
 
     # TrustyAI packages
     # More information available at:
@@ -26,7 +26,7 @@ dependencies = [
     #   - https://github.com/trustyai-explainability/trustyai-explainability-python/blob/main/requirements.txt
     "transformers~=4.56.1",
     "datasets~=4.0.0",
-    "accelerate~=1.10.1; platform_machine != 'ppc64le'",
+    "accelerate~=1.10.1; platform_machine != 'ppc64le' and platform_machine != 's390x'",
     "trustyai~=0.6.2",
     # Datascience and useful extensions
     "boto3~=1.40.27",
@@ -40,7 +40,7 @@ dependencies = [
     "scipy~=1.16.1",
     "skl2onnx~=1.19.1",
     "onnxconverter-common~=1.13.0", # Required for skl2onnx, as upgraded version is not compatible with protobuf
-    "codeflare-sdk~=0.31.1; platform_machine != 'ppc64le'",
+    "codeflare-sdk~=0.31.1; platform_machine != 'ppc64le' and platform_machine != 's390x'",
     "kubeflow-training==1.9.3",
 
     # DB connectors
