fix(datascience): enable Arrow S3 and Substrait support in pyarrow build (#1630)
Signed-off-by: puneetsharma21 <puneet.sharma21@ibm.com>

--- a/jupyter/datascience/ubi9-python-3.12/Dockerfile.konflux.cpu
+++ b/jupyter/datascience/ubi9-python-3.12/Dockerfile.konflux.cpu
@@ -136,6 +136,8 @@ RUN --mount=type=cache,target=/root/.cache/pip \
               -DARROW_WITH_LZ4=OFF \
               -DARROW_WITH_ZSTD=OFF \
               -DARROW_WITH_SNAPPY=OFF \
+              -DARROW_S3=ON \
+              -DARROW_SUBSTRAIT=ON \
               -DARROW_BUILD_TESTS=OFF \
               -DARROW_BUILD_BENCHMARKS=OFF \
               .. && \
