--- a/runtimes/rocm-pytorch/ubi9-python-3.12/Dockerfile.rocm
+++ b/runtimes/rocm-pytorch/ubi9-python-3.12/Dockerfile.rocm
@@ -81,7 +81,10 @@ WORKDIR /opt/app-root/bin
 # Install Python packages from requirements.txt
 COPY ${PYTORCH_SOURCE_CODE}/pylock.toml ./
 # Copy Elyra dependencies for air-gapped enviroment
-COPY ${PYTORCH_SOURCE_CODE}/utils ./utils/
+COPY --chown=1001 ${PYTORCH_SOURCE_CODE}/utils ./utils/
+# Download Elyra Bootstrapper
+RUN curl -L https://raw.githubusercontent.com/opendatahub-io/elyra/refs/tags/v4.3.1/elyra/kfp/bootstrapper.py \
+         -o ./utils/bootstrapper.py
 # Copy utility script
 COPY ${PYTORCH_SOURCE_CODE}/de-vendor-torch.sh ./
 
