--- a/runtimes/tensorflow/ubi9-python-3.12/Dockerfile.cuda
+++ b/runtimes/tensorflow/ubi9-python-3.12/Dockerfile.cuda
@@ -86,7 +86,10 @@ WORKDIR /opt/app-root/bin
 # Install Python packages from requirements.txt
 COPY ${TENSORFLOW_SOURCE_CODE}/pylock.toml ./
 # Copy Elyra dependencies for air-gapped enviroment
-COPY ${TENSORFLOW_SOURCE_CODE}/utils ./utils/
+COPY --chown=1001 ${TENSORFLOW_SOURCE_CODE}/utils ./utils/
+# Download Elyra Bootstrapper
+RUN curl -L https://raw.githubusercontent.com/opendatahub-io/elyra/refs/tags/v4.3.1/elyra/kfp/bootstrapper.py \
+         -o ./utils/bootstrapper.py
 
 RUN /bin/bash <<'EOF'
 set -Eeuxo pipefail
