NO-JIRA: fix(runtime/*/Dockerfile*): use env substitution to avoid adding empty entry to LD_LIBRARY_PATH (#2656)
```
+ cd arrow
+ export ARROW_HOME=/usr/local
+ ARROW_HOME=/usr/local
/bin/bash: line 15: LD_LIBRARY_PATH: unbound variable
Error: building at STEP "RUN --mount=type=cache,target=/root/.cache/pip --mount=type=cache,target=/root/.cache/dnf /bin/bash <<'EOF'": while running runtime: exit status 1
```

--- a/runtimes/datascience/ubi9-python-3.12/Dockerfile.cpu
+++ b/runtimes/datascience/ubi9-python-3.12/Dockerfile.cpu
@@ -61,7 +61,7 @@ RUN /bin/bash <<'EOF'
 set -Eeuxo pipefail
 if [ "$TARGETARCH" = "ppc64le" ]; then cat > /etc/profile.d/ppc64le.sh <<'PROFILE_EOF'
 export PKG_CONFIG_PATH=/usr/local/lib/pkgconfig/
-export LD_LIBRARY_PATH=/usr/local/lib64:/usr/local/lib:/usr/lib64:/usr/lib:$LD_LIBRARY_PATH
+export LD_LIBRARY_PATH=/usr/local/lib64:/usr/local/lib:/usr/lib64:/usr/lib${LD_LIBRARY_PATH:+:$LD_LIBRARY_PATH}
 export OPENBLAS_VERSION=0.3.30
 export ONNX_VERSION=1.19.0
 export PYARROW_VERSION=17.0.0
@@ -156,8 +156,8 @@ if [ "$TARGETARCH" = "s390x" ]; then
     cd arrow
     # Set environment variables for build
     export ARROW_HOME=/usr/local
-    export LD_LIBRARY_PATH=/usr/local/lib64:/usr/local/lib:$LD_LIBRARY_PATH
-    export PKG_CONFIG_PATH=/usr/local/lib64/pkgconfig:/usr/local/lib/pkgconfig:$PKG_CONFIG_PATH
+    export LD_LIBRARY_PATH=/usr/local/lib64:/usr/local/lib${LD_LIBRARY_PATH:+:$LD_LIBRARY_PATH}
+    export PKG_CONFIG_PATH=/usr/local/lib64/pkgconfig:/usr/local/lib/pkgconfig:${PKG_CONFIG_PATH:+:$PKG_CONFIG_PATH}
     # Build C++ library first
     cd cpp
     mkdir build && cd build
@@ -288,7 +288,7 @@ if [ "$TARGETARCH" = "ppc64le" ]; then
     pip3 install --no-cache-dir -r python/requirements-build.txt
     ARROW_HOME=$(pwd)/dist
     export ARROW_HOME
-    LD_LIBRARY_PATH=$(pwd)/dist/lib:$LD_LIBRARY_PATH
+    LD_LIBRARY_PATH=$(pwd)/dist/lib${LD_LIBRARY_PATH:+:$LD_LIBRARY_PATH}
     export LD_LIBRARY_PATH
     export CMAKE_PREFIX_PATH=$ARROW_HOME:$CMAKE_PREFIX_PATH
     export PARQUET_TEST_DATA="${PWD}/cpp/submodules/parquet-testing/data"
@@ -394,7 +394,7 @@ set -Eeuxo pipefail
 echo "Installing softwares and packages"
 if [ "$TARGETARCH" = "ppc64le" ]; then
     export PKG_CONFIG_PATH=/usr/local/lib/pkgconfig
-    export LD_LIBRARY_PATH=/usr/local/lib64:/usr/local/lib:/usr/lib64:/usr/lib:$LD_LIBRARY_PATH
+    export LD_LIBRARY_PATH=/usr/local/lib64:/usr/local/lib:/usr/lib64:/usr/lib${LD_LIBRARY_PATH:+:$LD_LIBRARY_PATH}
     uv pip install --strict --no-deps --no-cache --no-config --no-progress --verify-hashes --compile-bytecode --index-strategy=unsafe-best-match --requirements=./pylock.toml
 elif [ "$TARGETARCH" = "s390x" ]; then
     # For s390x, we need special flags and environment variables for building packages
